@@ -1,5 +1,8 @@
 (Format: Year/Month/Day)
 Changes for 0.9.3:
+*03/05/20:
+   * Add xinerama for placement and snapping, plus tidy (Simon)
+     Screen.hh/cc Window.cc Workspace.cc
 *03/05/19:
    * Clean + change xinerama, plus add maximize smarts (Simon)
      Screen.hh/cc Window.cc Workspace.cc Toolbar.cc Slit.cc     
